updating operator docs

--- a/src/themes/hugo-geekdoc/layouts/partials/menu.html
+++ b/src/themes/hugo-geekdoc/layouts/partials/menu.html
@@ -29,7 +29,7 @@
         {{ end }}
     </section>
 
-    <section class="gdoc-nav--main">
+    <!-- <section class="gdoc-nav--main">
         {{ if .Site.Data.menu.helm.helm }}
             <h2>V. Helm Operators</h2>
             {{ partial "menu-bundle" (dict "current" . "source" .Site.Data.menu.helm.helm) }}
@@ -41,7 +41,7 @@
             <h2>VI. Alternative Operators</h2>
             {{ partial "menu-bundle" (dict "current" . "source" .Site.Data.menu.alt.alt) }}
         {{ end }}
-    </section>
+    </section> -->
 
     <!-- <section class="gdoc-nav--main">
         <h2>Navigation</h2>
